syntax = "proto3";

package valv.v1;

import "google/api/field_behavior.proto";
import "valv/v1/resources.proto";

service MasterKeyManagementService {
  rpc CreateMasterKey(CreateMasterKeyRequest) returns (CreateMasterKeyResponse);
  rpc ListMasterKeys(ListMasterKeysRequest) returns (ListMasterKeysResponse);

  rpc ListMasterKeyVersions(ListMasterKeyVersionsRequest)
    returns (ListMasterKeyVersionsResponse);
  rpc CreateMasterKeyVersion(CreateMasterKeyVersionRequest)
    returns (CreateMasterKeyVersionResponse);
  rpc DestroyMasterKeyVersion(DestroyMasterKeyVersionRequest)
    returns (DestroyMasterKeyVersionResponse);

  rpc Encrypt(EncryptRequest) returns (EncryptResponse);
  rpc Decrypt(DecryptRequest) returns (DecryptResponse);
}

message CreateMasterKeyRequest {
  string keyring_name = 1
    [(google.api.field_behavior) = REQUIRED];

  string master_key_id = 2
    [(google.api.field_behavior) = REQUIRED];

  MasterKey master_key = 3
    [(google.api.field_behavior) = REQUIRED];
}

message ListMasterKeysRequest {
  string keyring_name = 1
    [(google.api.field_behavior) = REQUIRED];
}

message ListMasterKeyVersionsRequest {
  string keyring_name = 1
    [(google.api.field_behavior) = REQUIRED];

  string master_key_id = 2
    [(google.api.field_behavior) = REQUIRED];
}

message CreateMasterKeyVersionRequest {
  string keyring_name = 1
    [(google.api.field_behavior) = REQUIRED];

  string master_key_id = 2
    [(google.api.field_behavior) = REQUIRED];

  MasterKeyVersion master_key_version = 3
    [(google.api.field_behavior) = REQUIRED];
}

message DestroyMasterKeyVersionRequest {
  string keyring_name = 1
    [(google.api.field_behavior) = REQUIRED];

  string master_key_id = 2
    [(google.api.field_behavior) = REQUIRED];

  string master_key_version_id = 3
    [(google.api.field_behavior) = REQUIRED];
}

message EncryptRequest {
  string keyring_name = 1
    [(google.api.field_behavior) = REQUIRED];

  string master_key_id = 2
    [(google.api.field_behavior) = REQUIRED];

  bytes plaintext = 3
    [(google.api.field_behavior) = REQUIRED];
}

message DecryptRequest {
  string keyring_name = 1
    [(google.api.field_behavior) = REQUIRED];

  string master_key_id = 2
    [(google.api.field_behavior) = REQUIRED];

  bytes ciphertext = 3
    [(google.api.field_behavior) = REQUIRED];
}

message ListMasterKeysResponse {
  repeated MasterKey master_keys = 1;
}

message CreateMasterKeyResponse {
  MasterKey master_key = 1;
}

message ListMasterKeyVersionsResponse {
  repeated MasterKeyVersion master_key_versions = 1;
}

message CreateMasterKeyVersionResponse {
  MasterKeyVersion master_key_version = 1;
}

message DestroyMasterKeyVersionResponse {
  MasterKeyVersion master_key_version = 1;
}

message EncryptResponse {
  string name = 1
    [(google.api.field_behavior) = REQUIRED];

  bytes ciphertext = 2
    [(google.api.field_behavior) = REQUIRED];
}

message DecryptResponse {
  bytes plaintext = 1
    [(google.api.field_behavior) = REQUIRED];
}
